src/snapshots/kk__tests__compiler__typecheck__explicit_type_variable_5.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let arrayMap<From, To> = \(xs: Array<Element= From>, f: \From => To): Array<Element= To> =>
  let [head, ..._] = xs else \_ => []
  [head.f()]

let result = [{x= 3}].arrayMap<To= string>(\_ => 2)

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/explicit_type_variable_5.kk:5:44
  │
5 │ let result = [{x= 3}].arrayMap<To= string>(\_ => 2)
  │                                            ^^^^^^^ Type mismatch
  │
  = +-----------------+-----------------+
    |  EXPECTED TYPE  |   ACTUAL TYPE   |
    +-----------------+-----------------+
    |   \(            |   \(            |
    |     {           |     {           |
    |       x:        |       x:        |
    |         number, |         number, |
    |     }           |     }           |
    |   ) =>          |   ) =>          |
    | -   string      | +   number      |
    +-----------------+-----------------+
